<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/add_contact"
        android:title="@string/add_contact"
        android:icon="@drawable/add_contact"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/trash"
        android:title="@string/trash"
        android:icon="@drawable/trash"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/assign"
        android:title="@string/assign"
        android:icon="@drawable/tack"
        android:visible="true"
        app:showAsAction="always"/>

    <item android:id="@+id/defer"
        android:title="@string/defer"
        android:icon="@drawable/clock"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/done"
        android:title="@string/done"
        android:icon="@drawable/checked"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/change_category"
        android:title="@string/change_category"
        android:icon="@drawable/category"
        app:showAsAction="ifRoom"/>

</menu>